2.15.10 (19-04-2023)
- Bug fix: exclude annulled enrolments (before the end of report period) for international mobility 

2.15.9 (08-03-2023)
- Bug fix: RAIDES - report document ID type "other" as error at log file

2.15.8 (08-03-2023)
- Bug fix: RAIDES - report document ID type "other" as invalid
- Bug fix: RAIDES - Conclusion data - send the descriptive grade in specific conditions
- Bug fix: SAS - calculate the first month of execution year (according to student enrollments)

2.15.7 (13-02-2023)
- Bug fix: add grade entries to RAIDES mappings 

2.15.6 (08-02-2023)
- Bug fix: RAIDES logs
- Refactor: Make compatible with latest version of academic-core

2.15.5 (31-01-2023)
- Bug fix: only fill the OutroProgMobCredito field if the ProgMobilidadeCredito field has the value 2
- Bug fix: only fill the OutroPrograma field if the ProgMobilidade field has the value 2

2.15.4 (27-01-2023)
- Bug fix: label error.Raides.validation.motherSchoolLevel.missing

2.15.3 (26-01-2023)
- Bug fix: Test if escolaridadeAnterior is not empty

2.15.2 (25-01-2023)
- Improvement: RAIDES - add new validations (regime, school level and profession)

2.15.1 (18-01-2023)
- Refactor: Update XSD and logic to RAIDES22

2.15.0 (17-01-2023)
- Refactor: Remove institution unit deprecated slot from raides report request
- Refactor: Update XSD and logic to RAIDES22
- Refactor: Remove temporary fix's due to RAIDES21
- Improvement: Keep raides report request name on copy
- Improvement: Add degree types filter to raides request periods

2.14.4 (06-01-2023)
- Improvement: Change legal report transaction boundaries to avoid performance issues
- Improvement: Improved default raides data for new requests

2.14.3 (05-01-2023)
- Bug fix: SAS - ignore RegistrationDataByExecutionYear without registration date

2.14.2 (08-11-2022)
- Bug fix: add SchoolLevelType.FIRST_CYCLE_INTEGRATED_MASTER_DEGREE to DEGREE_SCHOOL_LEVELS

2.14.1 (26-10-2022)
- Refactor: Remove branch group subclasses