@@ -1,3 +1,5 @@
+- Refactor: Remove RegistrationStateTypeEnum references
+
 2.15.10 (19-04-2023)
 - Bug fix: exclude annulled enrolments (before the end of report period) for international mobility 
 
